tests/error/affectation.moc
void main() {
    int a = 42;
    1 = a;
}
